--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>pizza vue框架</title>
+    <link href="//cdn.bootcss.com/element-ui/1.3.7/theme-default/index.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/minireset.css/0.0.2/minireset.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
