--- a/demo/index.html
+++ b/demo/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>pizza vue框架</title>
-    <link href="//cdn.bootcss.com/element-ui/1.3.7/theme-default/index.css" rel="stylesheet">
-    <!-- <link href="//cdn.bootcss.com/minireset.css/0.0.2/minireset.css" rel="stylesheet"> -->
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>pizza vue框架</title>
+  <link href="https://cdn.bootcss.com/element-ui/2.4.0/theme-chalk/index.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+
 </html>
