重构拖拽，添加默认图标

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+  <i class="vlayer vlicon-warning" style="color:#f4ea2a;font-size:22px"></i>
+  <i class="vlayer vlicon-success" style="color:#00ba9b;font-size:22px"></i>
+  <i class="vlayer vlicon-error" style="color:#e9594b;font-size:22px"></i>
+  <i class="vlayer vlicon-wenti" style="color:#f4c500;font-size:22px"></i>
   <div id="app"></div>
 </body>
 
